<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/fragment2_bg"
        android:background="@mipmap/bg_texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:alpha="0.7"
        android:transitionName="@string/bgTransitionName"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/icon_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_0"
            android:layout_weight=".43"
            android:gravity="bottom">
            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_180"
                android:layout_centerHorizontal="true"
                android:id="@+id/iconMnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RelativeLayout>

            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:id="@+id/fragment2_logo"
                android:layout_width="@dimen/width_220"
                android:layout_height="@dimen/height_120"
                android:src="@mipmap/logo"
                android:transitionName="@string/logoTransitionName"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/transitions_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_0"
            android:paddingLeft="@dimen/padding_25"
            android:paddingRight="@dimen/padding_25"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:layout_weight=".57">
            <RelativeLayout
                android:alpha="1"
                android:id="@+id/layoutLogin"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_centerHorizontal="true"
                    android:layout_width="@dimen/width_110"
                    android:layout_height="@dimen/height_40"
                    android:background="@drawable/button_customs"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="@dimen/fonts_16"
                    android:text="ENTER"
                    android:textColor="@color/md_white_1000"
                    android:textDirection="ltr"/>

            </RelativeLayout>

            <LinearLayout
                android:alpha="1"
                android:id="@+id/layoutInfoApps"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_below="@id/layoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_below="@id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvInfoCreator"
                    android:textColor="@color/md_black_1000_50"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tvMail"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_below="@id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvInfoMailCreator"
                    android:textColor="@color/md_black_1000_50"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_marginTop="@dimen/margin_10"
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Version"
                    android:textColor="@color/md_red_900"
                    android:textSize="@dimen/fonts_15"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
